--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,22 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+
+
+
+/* @layer components {
+    .paginationButtons {
+      @apply text-white flex items-center justify-center mt-2 gap-5 w-fit bg-blue-600 py-1 px-3 
+       rounded-md text-sm hover:bg-blue-700 cursor-pointer relative left-[20%] lg:left-[40%] ;
+    }
+   
+  
+    .paginationActive{
+      @apply bg-black p-2  rounded-md flex justify-center items-center;
+    }
+    .paginationDisabled {
+      @apply opacity-50 cursor-not-allowed;
+    }
+  }
+   */
